# orbit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RUNNING.md  index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
.cursor/: hooks.json
.cursor/hooks/: check-rust.sh  check-typecheck.sh
.cursor/rules/: docs-sync.mdc  o1-check.mdc  project-overview.mdc  quality-gating.mdc  security-first.mdc  spaghetti-checker.mdc  test-driven.mdc
.github/: PULL_REQUEST_TEMPLATE.md
docs/: DESIGN_DOC.mdc  FRONTEND.mdc  PROJECT.mdc  TAURI.mdc  THEMES.md  UI.mdc  index.html
e2e/: orbit-ui-flow.spec.ts  switch-ui-flow.spec.ts  ui-flow.spec.ts
scripts/: monopipeline.mjs  release-macos.sh  sync-version.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: artwork.rs  game_content.rs  games.rs  importers.rs  mod.rs  session.rs  switch_library.rs  themes.rs  window.rs
src-tauri/src/database/: migrations.rs  mod.rs  repository.rs
src-tauri/src/importers/: astris.rs  gamehub.rs  mod.rs  native_apps.rs  steam.rs
src-tauri/src/launching/: launcher.rs  mod.rs  process_monitor.rs  session.rs
src-tauri/src/models/: game.rs  game_content.rs  mod.rs  session.rs  switch.rs
src-tauri/src/services/: artwork.rs  game_content.rs  library_sync.rs  mod.rs  steam_content.rs  switch_library.rs
src-tauri/src/utils/: filenames.rs  gamehub_shortcut.rs  macos_apps.rs  mod.rs  paths.rs  size.rs
src/app/: App.tsx  (+1 more)
(+68 files in other folders)
